--- a/NaturalEventsViewer/Eonet.Core/packages.config
+++ b/NaturalEventsViewer/Eonet.Core/packages.config
@@ -3,5 +3,16 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
 </packages>
