--- a/NaturalEventsViewer/NaturalEventsViewer.Web/packages.config
+++ b/NaturalEventsViewer/NaturalEventsViewer.Web/packages.config
@@ -13,10 +13,20 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.7" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.7" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.6" targetFramework="net472" />
   <package id="Unity.AspNet.WebApi" version="5.11.2" targetFramework="net472" />
